--- a/estilos/box.css
+++ b/estilos/box.css
@@ -5,3 +5,10 @@ div {
   width: 244px;
   height: 120px;
 }
+
+#paçoquinha {
+  background-color:#197e57;
+}
+#rapadura {
+  background-color: #b45252;
+}
